prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.localhost
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus-grafana
              port:
                number: 3000
